--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "start": "NODE_ENV=production node build/server.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "npm run test:lint && npm run dataValidate && npm run test:unit",
-    "test:accessibility": "npm run killApp && npm run build && run-p --race start bbcA11y",
-    "test:ampValidate": "npm run killApp && npm run build && run-p --race start amp:validate",
-    "test:prod:ci": "npm install --no-save cypress bbc-a11y && run-p --race start cypress && run-p --race start bbcA11y",
-    "test:e2e": "npm run killApp && npm run build && run-p --race start cypress",
-    "test:e2e:interactive": "npm run killApp && npm run build && run-p --race start cypress:interactive",
-    "test:e2e:storybook": "npm run killStorybook && run-p --race storybook cypress:storybook",
-    "test:e2e:storybook:ci": "run-p --race storybook cypress:storybook",
-    "test:e2e:storybook:interactive": "npm run killStorybook && run-p --race storybook cypress:storybook:interactive",
+    "test:accessibility": "npm run killApp && npm run build && concurrently \"npm run start\" \"npm run bbcA11y\"",
+    "n": "npm run killApp && npm run build && concurrently \"npm run start\" \"npm run amp:validate\"",
+    "test:prod:ci": "npm install --no-save cypress bbc-a11y && concurrently \"npm run start\" \"npm run cypress\" && concurrently \"npm run start\" \"npm run bbcA11y\"",
+    "test:e2e": "npm run killApp && npm run build && concurrently \"npm run start\" \"npm run cypress\"",
+    "test:e2e:interactive": "npm run killApp && npm run build && concurrently \"npm run start\" \"npm run cypress:interactive\"",
+    "test:e2e:storybook": "npm run killStorybook && concurrently \"npm run storybook cypress:storybook\"",
+    "test:e2e:storybook:ci": "concurrently \"npm run storybook\" \"npm run cypress:storybook\"",
+    "test:e2e:storybook:interactive": "npm run killStorybook && concurrently \"npm run storybook\" \"npm run cypress:storybook:interactive\"",
     "test:lighthouse": "node scripts/lighthouse/index.js",
-    "test:lighthouse:ci": "npm run build && run-p --race start test:lighthouse",
+    "test:lighthouse:ci": "npm run build && concurrently \"npm run start\" \"npm run test:lighthouse\"",
     "test:lint": "eslint --ext .js,jsx,json ./src ./scripts/lighthouse ./data ./cypress ./.storybook && swagger-cli validate data/schema.yaml",
     "test:lint:css": "stylelint 'src/**/*.js' 'src/**/*.jsx'",
     "test:unit": "razzle test --env=jsdom --coverage",
@@ -94,6 +94,7 @@
     "bbc-a11y": "^2.2.5",
     "chalk": "^2.4.1",
     "chrome-launcher": "^0.10.5",
+    "concurrently": "^4.1.0",
     "cypress": "^3.1.1",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.0.0",
@@ -106,7 +107,6 @@
     "jest-fetch-mock": "^1.7.4",
     "jest-styled-components": "^6.2.2",
     "lighthouse": "^3.2.1",
-    "npm-run-all": "^4.1.3",
     "prettier": "^1.15.0",
     "react-test-renderer": "^16.6.3",
     "stylelint": "^9.7.1",
